New grid, moved theme out of dls object to json. Added quciktype to type theme. Changing theme is now slow. Must devise better solution to convert the json to an object. File should be constant and not have to depend on parse.

--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -33,6 +33,11 @@
     "importHelpers": true,
     "tsBuildInfoFile": ".tsbuildinfo"
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/core/theme/types/index.tsx",
+    "src/core/theme/index.tsx"
+  ],
   "exclude": ["node_modules", "src/**/*.test.ts", "src/**/*.test.tsx"]
 }
