--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -66,7 +66,8 @@
     "test:unit:watch": "jest --watch",
     "[--- Utils ---]": "",
     "ts": "node -r esbuild-register",
-    "size": "pnpm run size-limit"
+    "size": "pnpm run size-limit",
+    "dts:theme": "quicktype --top-level Theme -l typescript ./src/core/theme/theme.json -o ./src/types/theme/index.ts && ./scripts/prefix.sh ./src/types/theme/index.ts Oxygen"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.5",
@@ -184,6 +185,7 @@
     "@oxygen/tsconfig": "*",
     "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-typescript": "^8.3.1",
+    "@rollup/plugin-json": "^6.0.0",
     "@size-limit/preset-big-lib": "^7.0.8",
     "@types/google.maps": "^3.50.5",
     "eslint-config-custom-oxygen": "*",
@@ -193,6 +195,7 @@
     "rollup-plugin-node-externals": "^4.1.1",
     "rollup-plugin-styles": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "size-limit": "^7.0.8"
+    "size-limit": "^7.0.8",
+    "ts-morph": "^17.0.1"
   }
 }
