[WIP] Working on Storybook and Rollup stuff

--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -33,11 +33,13 @@
     "importHelpers": true,
     "tsBuildInfoFile": ".tsbuildinfo"
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/core/theme/types/index.tsx",
-    "src/core/theme/index.tsx"
-  ],
-  "exclude": ["node_modules", "src/**/*.test.ts", "src/**/*.test.tsx"]
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "exclude": [
+    "node_modules",
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx",
+    "src/**/*.stories.tsx",
+    "src/**/*.stories.ts",
+    "src/**/*.stories.@(js|jsx|ts|tsx)"
+  ]
 }
