--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -51,6 +51,7 @@
     "[--- Build ---]": "",
     "prebuild": "rimraf dist",
     "build": "pnpm run build:ts",
+    "theme:build": "pnpm js:theme && pnpm dts:theme && pnpm run build:ts",
     "build:ts": "rollup --config",
     "[--- Dev ---]": "",
     "dev": "tsup --watch",
@@ -59,6 +60,10 @@
     "lint": "tsc --noEmit --project tsconfig.dev.json && pnpm eslint ./src --ext .js,.ts,.tsx",
     "[--- Clean ---]": "",
     "clean": "rimraf dist node_modules",
+    "[--- Storybook ---]": "",
+    "storybook": "start-storybook -p 6006 --no-open --no-manager-cache --disable-telemetry --quiet",
+    "storybook:build": "build-storybook --docs",
+    "storybook:preview": "serve storybook-static",
     "[--- Test ---]": "",
     "test": "pnpm test:unit",
     "test:watch": "pnpm test:unit:watch",
@@ -68,20 +73,20 @@
     "ts": "node -r esbuild-register",
     "size": "pnpm run size-limit",
     "js:theme": "pnpm json-to-js -i ./src/core/theme/theme.json -o ./src/core/theme/theme.ts --ts",
-    "dts:theme": "quicktype --top-level Theme -l typescript ./src/core/theme/theme.json -o ./src/types/theme/index.ts && ./scripts/prefix.sh ./src/types/theme/index.ts Oxygen"
+    "dts:theme": "quicktype --top-level Theme -l typescript ./src/core/theme/theme.json -o ./src/declarations/theme/index.ts && ./scripts/prefix.sh ./src/declarations/theme/index.ts Oxygen"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.0.5",
+    "@dnd-kit/core": "^6.0.6",
     "@dnd-kit/sortable": "^7.0.1",
-    "@dnd-kit/utilities": "3.2.0",
+    "@dnd-kit/utilities": "3.2.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@hookform/resolvers": "^2.9.10",
-    "@mui/material": "^5.10.16",
-    "@tanstack/react-query": "^4.18.0",
-    "@tanstack/react-query-devtools": "^4.18.0",
-    "axios": "^1.2.0",
+    "@mui/material": "^5.11.2",
+    "@tanstack/react-query": "^4.20.4",
+    "@tanstack/react-query-devtools": "^4.20.4",
+    "axios": "^1.2.2",
     "clsx": "^1.2.1",
     "date-fns": "2.29.3",
     "fast-equals": "^4.0.3",
@@ -93,15 +98,15 @@
     "react-cool-inview": "^3.0.1",
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.40.0",
+    "react-hook-form": "^7.41.3",
     "react-is": "18.2.0",
     "react-use": "^17.4.0",
-    "tslib": "2.4.0",
-    "tss-react": "^4.5.0",
+    "tslib": "2.4.1",
+    "tss-react": "^4.5.1",
     "use-places-autocomplete": "^4.0.0",
     "uuid": "^9.0.0",
     "yup": "^0.32.11",
-    "zustand": "^4.1.4",
+    "zustand": "^4.1.5",
     "@oxygen/json-to-js": "*"
   },
   "peerDependenciesMeta": {
@@ -168,7 +173,7 @@
     "@mui/base": "^5.0.0-alpha.108",
     "@mui/icons-material": "^5.10.16",
     "@mui/lab": "^5.0.0-alpha.110",
-    "@mui/material": "^5.10.16",
+    "@mui/material": "^5.11.2",
     "@mui/styled-engine": "^5.10.16",
     "@mui/system": "^5.10.16",
     "@mui/utils": "^5.10.16",
@@ -179,25 +184,38 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
-    "zustand": "^4.1.4"
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
-    "@mui/types": "7.2.2",
+    "@storybook/addon-a11y": "6.5.15",
+    "@storybook/addon-actions": "6.5.15",
+    "@storybook/addon-docs": "6.5.15",
+    "@storybook/addon-essentials": "6.5.15",
+    "@storybook/addon-links": "6.5.15",
+    "@storybook/addon-notes": "5.3.21",
+    "@storybook/addon-storysource": "6.5.15",
+    "@storybook/builder-vite": "0.2.6",
+    "@storybook/mdx2-csf": "0.0.3",
+    "@storybook/react": "6.5.15",
+    "@storybook/theming": "6.5.15",
+    "@vitejs/plugin-react": "3.0.0",
+    "@mui/types": "7.2.3",
     "@oxygen/prettier-config": "*",
     "@oxygen/tsconfig": "*",
     "@oxygen/json-to-js": "*",
-    "@rollup/plugin-commonjs": "^22.0.1",
-    "@rollup/plugin-typescript": "^8.3.1",
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-typescript": "^10.0.1",
     "@rollup/plugin-json": "^6.0.0",
-    "@size-limit/preset-big-lib": "^7.0.8",
-    "@types/google.maps": "^3.50.5",
+    "@size-limit/preset-big-lib": "^8.1.0",
+    "@types/google.maps": "^3.51.0",
     "eslint-config-custom-oxygen": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^2.70.0",
-    "rollup-plugin-node-externals": "^4.1.1",
+    "rollup": "^3.9.0",
+    "rollup-plugin-node-externals": "^5.0.3",
     "rollup-plugin-styles": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "size-limit": "^7.0.8"
+    "size-limit": "^8.1.0",
+    "vite": "4.0.3"
   }
 }
