--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "sandbox:dev": "turbo run dev --scope=@oxygen/sandbox --no-cache --parallel --continue --include-dependencies",
     "dev": "turbo run dev --no-cache --parallel --continue",
     "[-- Clean --]": "",
-    "clean": "turbo run clean && rimraf node_modules",
-    "clean:install": "turbo run clean && ./scripts/clean.sh",
+    "clean": "./scripts/clean.sh ./scripts/cleaner.txt .",
+    "clean:install": "turbo run clean && rimraf node_modules",
     "setup": "pnpm install && pnpm build",
     "refresh": "pnpm clean && pnpm setup",
     "[-- Deduplicate --]": "",
