Updates to pkgs, stable. Creating new branch to test TSS-react and other solutions for SSR.

--- a/packages/design-system/tsconfig.json
+++ b/packages/design-system/tsconfig.json
@@ -36,6 +36,7 @@
   "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": [
     "node_modules",
+    ".storybook",
     "src/**/*.test.ts",
     "src/**/*.test.tsx",
     "src/**/*.stories.tsx",
