--- a/apps/airbnb/package.json
+++ b/apps/airbnb/package.json
@@ -54,6 +54,7 @@
     "@mui/system": "^5.11.2",
     "@mui/utils": "^5.11.2",
     "@mui/x-date-pickers": "^5.0.12",
+    "@mui/x-date-pickers-pro": "^5.0.12",
     "@next/mdx": "^13.1.1",
     "@oxygen/design-system": "*",
     "@tanstack/react-query": "^4.20.4",
@@ -61,6 +62,10 @@
     "@tanstack/react-virtual": "^3.0.0-beta.23",
     "@tinymce/tinymce-react": "^4.2.0",
     "@welldone-software/why-did-you-render": "^7.0.1",
+    "AdapterDayjs": "link:@mui/x-date-pickers-pro/AdapterDayjs",
+    "DateRangePicker": "link:@mui/x-date-pickers-pro/DateRangePicker",
+    "StaticDateRangePicker": "link:@mui/x-date-pickers-pro/StaticDateRangePicker",
+    "dayjs": "^1.11.7",
     "html-react-parser": "^3.0.6",
     "intersection-observer": "^0.12.2",
     "next": "^13.1.1",
