--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -61,7 +61,7 @@
     "[--- Clean ---]": "",
     "clean": "rimraf dist node_modules",
     "[--- Storybook ---]": "",
-    "storybook": "start-storybook -p 6006 --no-open --no-manager-cache --disable-telemetry --quiet",
+    "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook --docs",
     "storybook:preview": "serve storybook-static",
     "[--- Test ---]": "",
@@ -187,25 +187,14 @@
     "zustand": "^4.1.5"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "6.5.15",
-    "@storybook/addon-actions": "6.5.15",
-    "@storybook/addon-docs": "6.5.15",
-    "@storybook/addon-essentials": "6.5.15",
-    "@storybook/addon-links": "6.5.15",
-    "@storybook/addon-notes": "5.3.21",
-    "@storybook/addon-storysource": "6.5.15",
-    "@storybook/builder-vite": "0.2.6",
-    "@storybook/mdx2-csf": "0.0.3",
-    "@storybook/react": "6.5.15",
-    "@storybook/theming": "6.5.15",
-    "@vitejs/plugin-react": "3.0.0",
-    "@mui/types": "7.2.3",
+    "@mui/types": "^7.2.3",
     "@oxygen/prettier-config": "*",
     "@oxygen/tsconfig": "*",
     "@oxygen/json-to-js": "*",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-typescript": "^10.0.1",
     "@rollup/plugin-json": "^6.0.0",
+    "rollup-plugin-analyzer": "^4.0.0",
     "@size-limit/preset-big-lib": "^8.1.0",
     "@types/google.maps": "^3.51.0",
     "eslint-config-custom-oxygen": "*",
@@ -215,7 +204,6 @@
     "rollup-plugin-node-externals": "^5.0.3",
     "rollup-plugin-styles": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "size-limit": "^8.1.0",
-    "vite": "4.0.3"
+    "size-limit": "^8.1.0"
   }
 }
