--- a/packages/jsonToJs/tsconfig.json
+++ b/packages/jsonToJs/tsconfig.json
@@ -35,6 +35,7 @@
   "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": [
     "node_modules",
+    ".storybook",
     "src/**/*.test.ts",
     "src/**/*.test.tsx",
     "src/**/*.stories.tsx",
