Init of Amplify-Assistant using T3.

--- a/turbo.json
+++ b/turbo.json
@@ -2,16 +2,7 @@
   "pipeline": {
     "build": {
       "outputs": ["dist/**", ".next/**"],
-      "dependsOn": ["^build"],
-      "env": [
-        "NODE_ENV",
-        "NEXT_PUBLIC_GMAPS_API",
-        "NEXT_PUBLIC_GMAPS_DEV_API",
-        "NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID",
-        "NEXT_PUBLIC_GA_ID",
-        "NEXT_PUBLIC_DOMAIN_NAME",
-        "NEXT_PUBLIC_SITE"
-      ]
+      "dependsOn": ["^build"]
     },
     "clean": {
       "cache": false
@@ -34,6 +25,5 @@
     "update-dependencies": {
       "cache": false
     }
-  },
-  "globalDependencies": [".env", ".env.local", "tsconfig.json"]
+  }
 }
