--- a/package.json
+++ b/package.json
@@ -1,33 +1,21 @@
 {
   "private": true,
   "license": "MIT",
-  "name": "@oxygen/repo",
   "version": "0.0.0",
   "author": {
     "name": "Raf Szuminski",
     "email": "rafcin.s@gmail.com",
     "url": "https://rafszuminski.com"
   },
-  "repository": "rafcin/fox.git",
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
-  },
-  "engines": {
-    "node": ">=16",
-    "pnpm": ">=7"
-  },
-  "type": "module",
   "scripts": {
     "[-- Build --]": "",
     "airbnb:build": "turbo run build --filter=@oxygen/airbnb",
-    "docs:build": "turbo run build --filter=@oxygen/docs",
-    "bot:build": "turbo run build --filter=@oxygen/bot",
+    "amplify-assistant:build": "turbo run build --filter=@oxygen/amplify-assistant",
     "sandbox:build": "turbo run build --filter=@oxygen/sandbox",
     "build": "turbo run build",
     "[-- Dev --]": "",
     "airbnb:dev": "turbo run dev --scope=@oxygen/airbnb --no-cache --parallel --continue --include-dependencies",
-    "docs:dev": "turbo run dev --scope=@oxygen/docs --no-cache --parallel --continue --include-dependencies",
-    "bot:dev": "turbo run dev --scope=@oxygen/bot --no-cache --parallel --continue --include-dependencies",
+    "amplify-assistant:dev": "turbo run dev --scope=@oxygen/amplify-assistant --no-cache --parallel --continue --include-dependencies",
     "sandbox:dev": "turbo run dev --scope=@oxygen/sandbox --no-cache --parallel --continue --include-dependencies",
     "dev": "turbo run dev --no-cache --parallel --continue",
     "[-- Clean --]": "",
