--- a/packages/discord-backend/package.json
+++ b/packages/discord-backend/package.json
@@ -2,8 +2,8 @@
   "private": false,
   "license": "Apache-2.0",
   "version": "0.0.0",
-  "name": "@oxygen/json-to-js",
-  "description": "Convert JSON to a JS object",
+  "name": "@oxygen/discord-backend",
+  "description": "Design System by Rafcin",
   "author": {
     "name": "Raf Szuminski",
     "email": "rafcin.s@gmail.com",
@@ -14,9 +14,12 @@
     "registry": "https://registry.npmjs.org/"
   },
   "keywords": [
-    "json",
-    "js",
-    "object"
+    "backend",
+    "prisma",
+    "discord",
+    "mongodb",
+    "db",
+    "trpc"
   ],
   "engines": {
     "node": "^14.13.1 || >=16.0.0",
@@ -29,15 +32,15 @@
       "types": "./dist/types/index.d.ts",
       "import": "./dist/esm/index.js",
       "require": "./dist/index.js"
-    }
+    },
+    "./primitives.json": "./dist/primitives.json"
   },
   "files": [
     "dist",
+    "internal",
     "README.md"
   ],
   "scripts": {
-    "[--- Run ---]": "",
-    "json-to-js": "node ./dist/index",
     "[--- Build ---]": "",
     "prebuild": "rimraf dist",
     "build": "pnpm run build:ts",
@@ -49,26 +52,41 @@
     "lint": "tsc --noEmit --project tsconfig.dev.json && pnpm eslint ./src --ext .js,.ts,.tsx",
     "[--- Clean ---]": "",
     "clean": "rimraf dist node_modules",
+    "[--- Test ---]": "",
+    "test": "pnpm test:unit",
+    "test:watch": "pnpm test:unit:watch",
+    "test:unit": "jest",
+    "test:unit:watch": "jest --watch",
     "[--- Utils ---]": "",
     "ts": "node -r esbuild-register",
-    "size": "pnpm run size-limit"
-  },
-  "bin": {
-    "json-to-js": "./dist/index.js"
+    "size": "pnpm run size-limit",
+    "[--- Prisma ---]": "",
+    "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
+    "prisma:migrate": "prisma migrate",
+    "prisma:studio": "prisma studio",
+    "prisma:push": "prisma db push --skip-generate"
   },
   "dependencies": {
-    "commander": "^9.4.1"
+    "@prisma/client": "^4.5.0",
+    "@trpc/server": "^10.0.0",
+    "axios": "^1.2.2",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "prisma": "^4.5.0",
+    "prisma-trpc-generator": "^1.0.2",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@oxygen/json-to-js": "*",
     "@oxygen/prettier-config": "*",
     "@oxygen/tsconfig": "*",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-typescript": "^10.0.1",
-    "rollup-plugin-analyzer": "^4.0.0",
     "@size-limit/preset-big-lib": "^8.1.0",
     "eslint-config-custom-oxygen": "*",
     "rollup": "^3.9.0",
+    "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-node-externals": "^5.0.3",
     "rollup-plugin-styles": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
