--- a/packages/discord-backend/package.json
+++ b/packages/discord-backend/package.json
@@ -73,7 +73,6 @@
     "bcrypt": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
     "prisma": "^4.5.0",
-    "prisma-trpc-generator": "^1.0.2",
     "zod": "^3.18.0"
   },
   "devDependencies": {
@@ -90,6 +89,7 @@
     "rollup-plugin-node-externals": "^5.0.3",
     "rollup-plugin-styles": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "size-limit": "^8.1.0"
+    "size-limit": "^8.1.0",
+    "zod-prisma": "^0.5.4"
   }
 }
