--- a/packages/discord-backend/package.json
+++ b/packages/discord-backend/package.json
@@ -73,6 +73,7 @@
     "bcrypt": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
     "prisma": "^4.5.0",
+    "trpc-shield": "^0.3.0",
     "zod": "^3.18.0"
   },
   "devDependencies": {
