--- a/config/rollup-config/package.json
+++ b/config/rollup-config/package.json
@@ -57,11 +57,13 @@
     "test:unit:watch": "jest --watch"
   },
   "dependencies": {
-    "rollup": "^3.9.1",
-    "@swc/core": "^1.3.24",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
+    "@size-limit/preset-big-lib": "^8.1.0",
+    "@swc/core": "^1.3.24",
+    "rollup": "^3.9.1",
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-delete": "^2.0.0",
@@ -73,7 +75,6 @@
     "rollup-plugin-swc3": "^0.8.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
-    "size-limit": "^8.1.0",
-    "@size-limit/preset-big-lib": "^8.1.0"
+    "size-limit": "^8.1.0"
   }
 }
