--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -79,10 +79,10 @@
     "@googlemaps/react-wrapper": "^1.1.35",
     "@hookform/resolvers": "^2.9.10",
     "@mui/material": "^5.11.5",
+    "@mui/x-date-pickers": "^5.0.14",
     "@oxygen/json-to-js": "*",
     "@tanstack/react-query": "^4.22.0",
     "@tanstack/react-query-devtools": "^4.22.0",
-    "TimePicker": "link:@mui/x-date-pickers/TimePicker",
     "axios": "^1.2.3",
     "clsx": "^1.2.1",
     "date-fns": "2.29.3",
