--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -81,6 +81,7 @@
     "@mui/material": "^5.11.5",
     "@mui/x-date-pickers": "^5.0.14",
     "@oxygen/json-to-js": "*",
+    "@rollup/plugin-json": "^6.0.0",
     "@tanstack/react-query": "^4.22.0",
     "@tanstack/react-query-devtools": "^4.22.0",
     "axios": "^1.2.3",
