Sitemap, auth, mutation, fixes, select

--- a/apps/airbnb/tsconfig.json
+++ b/apps/airbnb/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@oxygen/tsconfig/next.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "preserveSymlinks": true,
     "paths": {
       "@/*": ["src/*"],
       "@/content/*": ["src/content/*"],
