--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
+.env
+**/.env
+.env.*
+**/.env.*
 
 # compiled output
 /dist
