--- a/apps/explorer/.gitignore
+++ b/apps/explorer/.gitignore
@@ -1,34 +1,65 @@
-# Sentry
-.sentryclirc
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+.env
+**/.env
+.env.*
+**/.env.*
+
+# compiled output
+/dist
+/tmp
+/out-tsc
+
+# Turbo
+.turbo
+
+# dependencies
+/node_modules
+
+**/deploy/**
+.next
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+yarn.lock
+testem.log
+/typings
 
 
-# Sentry
-.sentryclirc
+#yarn settings
+/.yarn/*
+!/.yarn/plugins
+!/.yarn/releases
 
+# System Files
+.DS_Store
+Thumbs.db
 
-# Sentry
-.sentryclirc
+#pnpm
+pnpm-lock.yaml
 
-# Sentry
-.sentryclirc
+#Rollup
+.rollup.cache
 
-#amplify-do-not-edit-begin
-amplify/\#current-cloud-backend
-amplify/.config/local-*
-amplify/logs
-amplify/mock-data
-amplify/backend/amplify-meta.json
-amplify/backend/.temp
-build/
-dist/
-node_modules/
-aws-exports.js
-awsconfiguration.json
-amplifyconfiguration.json
-amplifyconfiguration.dart
-amplify-build-config.json
-amplify-gradle-config.json
-amplifytools.xcconfig
-.secret-*
-**.sample
-#amplify-do-not-edit-end
+#TS
+.tsbuildinfo
