--- a/packages/amplify-helper-backend/package.json
+++ b/packages/amplify-helper-backend/package.json
@@ -50,26 +50,33 @@
     "[--- Utils ---]": "",
     "ts": "node -r esbuild-register",
     "size": "pnpm run size-limit",
-    "postinstall": "prisma generate"
+    "[--- Prisma ---]": "",
+    "postinstall": "prisma generate",
+    "studio": "prisma studio",
+    "db:migrate:deploy": "prisma migrate deploy",
+    "db:migrate:dev": "prisma migrate dev",
+    "db:push": "prisma db push",
+    "db:seed": "tsx src/seed.ts",
+    "db:migrate:force": "prisma migrate reset --force"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
-    "@trpc/client": "^10.9.0",
-    "@trpc/next": "^10.9.0",
-    "@trpc/server": "^10.9.0",
-    "next-auth": "^4.18.10",
-    "prisma": "^4.9.0",
+    "@trpc/client": "^10.10.0",
+    "@trpc/next": "^10.10.0",
+    "@trpc/server": "^10.10.0",
+    "dotenv": "^16.0.3",
+    "next-auth": "^4.19.2",
     "prisma-trpc-generator": "^1.0.2",
     "superjson": "1.12.2",
     "trpc-shield": "^0.4.0",
     "zod": "^3.20.2",
-    "zod-prisma-types": "^1.6.8"
+    "zod-prisma-types": "^2.0.8"
   },
   "devDependencies": {
     "@oxygen/tsconfig": "*",
     "@prisma/client": "^4.9.0",
-    "@trpc/server": "^10.9.0",
+    "@trpc/server": "^10.10.0",
     "eslint-config-custom-oxygen": "*",
     "prisma": "^4.9.0"
   }
