More TRPC changes, test on Mac

--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,6 @@
 @oxygen:registry=https://registry.npmjs.org/
 strict-peer-dependencies=false
 auto-install-peers=true
-shamefully-hoist=true
+# shamefully-hoist=true
 # In order to cache Prisma correctly
 public-hoist-pattern[]=*prisma*
