--- a/apps/robin/package.json
+++ b/apps/robin/package.json
@@ -77,7 +77,8 @@
     "superjson": "1.12.2",
     "use-places-autocomplete": "^4.0.0",
     "zod": "^3.20.6",
-    "zustand": "^4.3.3"
+    "zustand": "^4.3.3",
+    "axios": "^1.3.3"
   },
   "devDependencies": {
     "@mui/types": "7.2.3",
