--- a/apps/robin/tsconfig.json
+++ b/apps/robin/tsconfig.json
@@ -2,7 +2,6 @@
   "extends": "@oxygen/tsconfig/next.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "preserveSymlinks": true,
     "paths": {
       "@/*": ["src/*"],
       "@/content": ["src/content/*"],
@@ -10,7 +9,7 @@
       "@/pages": ["src/pages/*"],
       "@/schema": ["src/schema/*"],
       "@/scripts": ["src/scripts/*"],
-      "@/server": ["src/serverA/*"],
+      "@/server": ["src/server/*"],
       "@/styles": ["src/styles/*"],
       "@/third-party": ["src/third-party/*"],
       "@/trpc": ["src/trpc/*"],
@@ -18,16 +17,6 @@
       "@/utils": ["src/utils/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "src/content/controls/signin/indextsx"
-  ],
-  "exclude": ["node_modules"],
-  "ts-node": {
-    "compilerOptions": {
-      "module": "CommonJS"
-    }
-  }
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.cjs", "**/*.mjs"],
+  "exclude": ["node_modules"]
 }
