--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
   "devDependencies": {
     "@oxygen/tsconfig": "*",
     "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-typescript": "^11.0.0",
     "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@swc/core": "^1.3.35",
     "@swc/helpers": "^0.4.14",
     "@types/cors": "^2.8.13",
@@ -71,6 +71,7 @@
     "shx": "^0.3.4",
     "tsup": "^6.6.3",
     "turbo": "^1.7.4",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "npkill": "^0.10.0"
   }
 }
