--- a/apps/robin/package.json
+++ b/apps/robin/package.json
@@ -42,6 +42,8 @@
     "@emotion/styled": "^11.10.5",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@hookform/resolvers": "^2.9.11",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "@mui/base": "^5.0.0-alpha.118",
     "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.9",
@@ -51,6 +53,7 @@
     "@mui/x-data-grid": "^5.17.23",
     "@mui/x-data-grid-generator": "^5.17.23",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/mdx": "^13.1.6",
     "@oxygen/design-system": "*",
     "@oxygen/prisma-robin": "*",
     "@tanstack/react-query": "^4.24.6",
@@ -60,6 +63,7 @@
     "@trpc/react-query": "^10.11.1",
     "@trpc/server": "^10.11.1",
     "@welldone-software/why-did-you-render": "^7.0.1",
+    "axios": "^1.3.3",
     "dayjs": "^1.11.7",
     "html-react-parser": "^3.0.9",
     "intersection-observer": "^0.12.2",
@@ -77,8 +81,7 @@
     "superjson": "1.12.2",
     "use-places-autocomplete": "^4.0.0",
     "zod": "^3.20.6",
-    "zustand": "^4.3.3",
-    "axios": "^1.3.3"
+    "zustand": "^4.3.3"
   },
   "devDependencies": {
     "@mui/types": "7.2.3",
