https://github.com/prisma/prisma/issues/17687 applied changes. Seems to work, but NextJS fails to send data

--- a/apps/airbnb/package.json
+++ b/apps/airbnb/package.json
@@ -21,7 +21,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "[-- Clean --]": "",
-    "clean": "rimraf dist node_modules .next",
+    "clean": "pnpm rimraf .next/ node_modules/ .turbo/",
     "lint": "eslint --max-warnings 0 .",
     "lint-fix": "eslint --fix .",
     "[-- Test --]": "",
