--- a/apps/robin/package.json
+++ b/apps/robin/package.json
@@ -20,51 +20,43 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "generate": "prisma generate",
-    "postinstall": "prisma generate",
-    "[-- Clean --]": "",
-    "clean": "rimraf dist node_modules .next",
-    "lint": "eslint --max-warnings 0 .",
-    "lint-fix": "eslint --fix .",
-    "[-- Test --]": "",
-    "tsc": "tsc -p tsconfig.json",
-    "test": "jest --verbose",
-    "test-watch": "jest --verbose --watch",
-    "test-coverage": "jest --coverage --verbose",
+    "[--- Clean ---]": "",
+    "clean": "pnpm rimraf .next/ node_modules/ .turbo/",
     "[-- Updates --]": "",
     "update-dependencies": "npx npm-check-updates -u"
   },
   "dependencies": {
     "@builder.io/partytown": "^0.7.5",
     "@emotion/cache": "^11.10.5",
-    "@emotion/react": "^11.10.5",
+    "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/styled": "^11.10.6",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@hookform/resolvers": "^2.9.11",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@mui/base": "^5.0.0-alpha.118",
     "@mui/lab": "^5.0.0-alpha.120",
-    "@mui/material": "^5.11.9",
+    "@mui/material": "^5.11.10",
     "@mui/styled-engine": "^5.11.9",
     "@mui/system": "^5.11.9",
     "@mui/utils": "^5.11.9",
-    "@mui/x-data-grid": "^5.17.23",
-    "@mui/x-data-grid-generator": "^5.17.23",
+    "@mui/x-data-grid": "^5.17.24",
+    "@mui/x-data-grid-generator": "^5.17.24",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/mdx": "^13.1.6",
+    "nico": "*",
     "@oxygen/design-system": "*",
-    "@oxygen/prisma-robin": "*",
-    "@tanstack/react-query": "^4.24.6",
-    "@tanstack/react-query-devtools": "^4.24.6",
-    "@trpc/client": "^10.11.1",
-    "@trpc/next": "^10.11.1",
-    "@trpc/react-query": "^10.11.1",
-    "@trpc/server": "^10.11.1",
+    "@tanstack/react-query": "^4.24.10",
+    "@tanstack/react-query-devtools": "^4.24.10",
+    "@trpc/client": "^10.12.0",
+    "@trpc/next": "^10.12.0",
+    "@trpc/react-query": "^10.12.0",
+    "@trpc/server": "^10.12.0",
     "@welldone-software/why-did-you-render": "^7.0.1",
     "axios": "^1.3.3",
     "dayjs": "^1.11.7",
+    "experimental-prisma-webpack-plugin": "^0.0.5",
     "html-react-parser": "^3.0.9",
     "intersection-observer": "^0.12.2",
     "next": "^13.1.6",
