--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "sandbox:dev": "turbo run dev --scope=@oxygen/sandbox --no-cache --parallel --continue --include-dependencies",
     "dev": "turbo run dev --no-cache --parallel --continue",
     "[-- Clean --]": "",
-    "clean": "./scripts/clean.sh ./scripts/cleaner.txt .",
-    "clean:install": "turbo run clean",
+    "clean": "turbo run clean && rimraf node_modules pnpm-lock.yaml && pnpm i",
     "clean:rebuild": "turbo run clean && pnpm i && pnpm build",
     "setup": "pnpm install && pnpm build",
     "refresh": "pnpm clean && pnpm setup",
@@ -37,21 +36,18 @@
   },
   "devDependencies": {
     "@oxygen/tsconfig": "*",
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@swc/core": "^1.3.35",
+    "@swc/core": "^1.3.36",
     "@swc/helpers": "^0.4.14",
     "@types/cors": "^2.8.13",
     "@types/is-ci": "^3.0.0",
     "@types/loadjs": "^4.0.1",
     "@types/lodash": "^4.14.191",
-    "@types/node": "^18.13.0",
+    "@types/node": "^18.14.0",
     "@types/object-hash": "3.0.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/uuid": "^9.0.0",
-    "@typescript-eslint/parser": "^5.52.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "bunchee": "^2.2.0",
     "commitizen": "^4.3.0",
     "eslint": "^8.34.0",
@@ -61,17 +57,11 @@
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
-    "quicktype": "22.0.0",
     "rimraf": "^4.1.2",
-    "rollup": "^3.15.0",
-    "rollup-plugin-analyzer": "^4.0.0",
-    "rollup-plugin-node-externals": "^5.1.2",
-    "rollup-plugin-styles": "^4.0.0",
-    "rollup-plugin-terser": "^7.0.2",
     "shx": "^0.3.4",
     "tsup": "^6.6.3",
-    "turbo": "^1.7.4",
+    "turbo": "^1.8.1",
     "typescript": "^4.9.5",
-    "npkill": "^0.10.0"
+    "tslib": "^2.5.0"
   }
 }
