--- a/packages/design-system/package.json
+++ b/packages/design-system/package.json
@@ -44,7 +44,7 @@
   ],
   "scripts": {
     "[--- Build ---]": "",
-    "build": "rollup --config",
+    "build": "tsup",
     "build:all": "pnpm js:theme && pnpm dts:theme && pnpm build",
     "[--- Dev ---]": "",
     "dev": "tsup --watch",
@@ -52,7 +52,7 @@
     "[--- Lint ---]": "",
     "lint": "tsc --noEmit --project tsconfig.dev.json && pnpm eslint ./src --ext .js,.ts,.tsx",
     "[--- Clean ---]": "",
-    "clean": "rimraf dist node_modules",
+    "clean": "pnpm rimraf dist/ node_modules/ .turbo/",
     "[--- Storybook ---]": "",
     "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook --docs",
@@ -71,18 +71,18 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^2.16.0",
-    "@dnd-kit/core": "^6.0.7",
+    "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "3.2.1",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@hookform/resolvers": "^2.9.11",
-    "@mui/material": "^5.11.9",
-    "@mui/x-date-pickers": "^5.0.18",
+    "@mui/material": "^5.11.10",
+    "@mui/x-date-pickers": "^5.0.19",
     "@oxygen/json-to-js": "*",
-    "@tanstack/react-query": "^4.24.6",
-    "@tanstack/react-query-devtools": "^4.24.6",
+    "@tanstack/react-query": "^4.24.10",
+    "@tanstack/react-query-devtools": "^4.24.10",
     "axios": "^1.3.3",
     "clsx": "^1.2.1",
     "date-fns": "2.29.3",
@@ -162,13 +162,13 @@
   },
   "peerDependencies": {
     "@emotion/cache": "^11.10.5",
-    "@emotion/react": "^11.10.5",
+    "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/styled": "^11.10.6",
     "@mui/base": "^5.0.0-alpha.108",
     "@mui/icons-material": "^5.10.16",
     "@mui/lab": "^5.0.0-alpha.110",
-    "@mui/material": "^5.11.9",
+    "@mui/material": "^5.11.10",
     "@mui/styled-engine": "^5.10.16",
     "@mui/system": "^5.10.16",
     "@mui/utils": "^5.10.16",
@@ -184,8 +184,9 @@
   "devDependencies": {
     "@mui/types": "^7.2.3",
     "@oxygen/json-to-js": "*",
-    "@types/google.maps": "^3.51.1",
+    "@types/google.maps": "^3.52.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "quicktype": "23.0.5"
   }
 }
