--- a/apps/shanks/package.json
+++ b/apps/shanks/package.json
@@ -76,6 +76,7 @@
     "react-player": "^2.11.2",
     "react-use": "^17.4.0",
     "superjson": "1.9.1",
+    "swiper": "^9.0.5",
     "use-places-autocomplete": "^4.0.0",
     "zod": "^3.20.2",
     "zustand": "^4.3.3"
