--- a/apps/shanks/tsconfig.json
+++ b/apps/shanks/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "@/*": ["src/*"],
       "@/content": ["src/content/*"],
+      "@/config": ["src/config/*"],
       "@/env": ["src/env/*"],
       "@/pages": ["src/pages/*"],
       "@/schema": ["src/schema/*"],
