--- a/apps/shanks/package.json
+++ b/apps/shanks/package.json
@@ -59,15 +59,19 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "@videojs-player/react": "^1.0.0",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "html-react-parser": "^3.0.9",
     "intersection-observer": "^0.12.2",
+    "m3u8": "^0.0.10",
+    "m3u8-parser": "^6.0.0",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
     "next-pwa": "^5.6.0",
     "next-seo": "^5.15.0",
     "next-sitemap": "3.1.52",
+    "nextjs-cors": "^2.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
@@ -78,6 +82,7 @@
     "superjson": "1.9.1",
     "swiper": "^9.0.5",
     "use-places-autocomplete": "^4.0.0",
+    "video.js": "^8.0.4",
     "zod": "^3.20.2",
     "zustand": "^4.3.3"
   },
